syntax = "proto2";

message FftPoint {
  optional float frequency = 1;
  optional float upper_amp = 2;
  optional float lower_amp = 3;
}

message Measurement {
  optional float time = 1;
  optional float upper_acc = 2;
  optional float lower_acc = 3;
}

message Trial {
  optional int32 day = 1;
  optional float start_time = 2;
  repeated Measurement measurements = 3;
  repeated FftPoint fft_original = 4;
  repeated FftPoint fft_filtered = 5;
  optional bool is_monitor = 6;
}
